@@ -48,6 +48,7 @@ public:
 
     virtual ~BinaryInputPort() {};
     virtual int getU8() = 0;
+    virtual int lookaheadU8() = 0;
     virtual ByteVector* getByteVector(int size) = 0;
     virtual ucs4string toString() = 0;
     virtual int open() = 0;
